--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Lab Assignment 2</title>
 
@@ -7,9 +8,9 @@
 
 <body>
     <div class="main-container">
-        <main-header></main-header>
-        <main-content></main-content>
-        <main-footer></main-footer>
+        <app-main-header></app-main-header>
+        <app-main-content></app-main-content>
+        <app-main-footer></app-main-footer>
         <!-- <div class="row-one">
             <div class="container-padding">
                 r1c1
