--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -5,17 +5,6 @@
     background-color: #552483;
 }
 
-.table-one {
-    width: 100%;
-    border: 1px solid #CCC;
-}
-
-.table-one > tbody > tr > td {
-    border: 1px solid #CCC;
-    min-height: 50px;
-    padding: .5em;
-}
-
-.add-button {
-    font-size: bold;
+.pull-right {
+    float:right;
 }
