--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -2,10 +2,15 @@
     <div class="container-padding">
         r1c1
     </div>
-    <div (mouseenter)="showGreeting()" (mouseleave)="resetGreeting()" id="r1c2" class="container-padding">
-        r1c2
+    <div id="r1c2" class="container-padding">
+        <button (click)="navigateTo('')" class="nav-buttons" type="button" mat-raised-button color="primary">
+            Home
+        </button>
+        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="primary">
+            Courses
+        </button>
     </div>
     <div class="container-padding">
-        r1c3
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
     </div>
 </div>
