--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,40 +10,8 @@
     <div class="main-container">
         <app-main-header></app-main-header>
         <app-main-content></app-main-content>
+        <router-outlet class="main-outlet"></router-outlet>
         <app-main-footer></app-main-footer>
-        <!-- <div class="row-one">
-            <div class="container-padding">
-                r1c1
-            </div>
-            <div (mouseenter)="showGreeting()" (mouseleave)="resetGreeting()" id="r1c2" class="container-padding">
-                r1c2
-            </div>
-            <div class="container-padding">
-                r1c3
-            </div>
-        </div> -->
-        <!-- <div class="row-two">
-            <div class="container-padding">
-                r2c1
-            </div>
-            <div class="container-padding">
-                r2c2
-            </div>
-            <div class="container-padding">
-                r2c3
-            </div>
-        </div> -->
-        <!-- <div class="row-three">
-            <div class="container-padding">
-                r3c1
-            </div>
-            <div class="container-padding">
-                r3c2
-            </div>
-            <div class="container-padding">
-                r3c3
-            </div>
-        </div> -->
     </div>
 </body>
 
