--- a/src/app/main-header/main-header.component.css
+++ b/src/app/main-header/main-header.component.css
@@ -2,4 +2,10 @@
     display: grid;
     grid-template-columns: 1fr 5fr 2fr;
     height: 100%;
+    width: 100%;
+}
+
+.nav-buttons {
+    margin-right: 10px;
+    
 }
