--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,5 @@ body {
     margin: 12px;
     border: 1px dashed #d2d440;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
