--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,46 +1,34 @@
-<table class="table">
-    <thead class="thead-dark">
-        <tr>
-            <th scope="col">Condition X</th>
-            <th scope="col">Condition Y</th>
-            <th scope="col">Not X (!X)</th>
-            <th scope="col">Not Y (!Y)</th>
-            <th scope="col">X && Y</th>
-            <th scope="col">X || Y</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr scope="row">
-            <td>{{condX}}</td>
-            <td>{{condY}}</td>
-            <td>{{!condX}}</td>
-            <td>{{!condY}}</td>
-            <td>{{condX && condY}}</td>
-            <td>{{condX || condY}}</td>
-        </tr>
-        <tr scope="row">
-            <td>{{r2CondX}}</td> 
-            <td>{{r2CondY}}</td>
-            <td>{{!r2CondX}}</td>
-            <td>{{!r2CondY}}</td>
-            <td>{{r2CondX && r2CondY}}</td>
-            <td>{{r2CondX || r2CondY}}</td>
-        </tr>
-        <tr scope="row">
-            <td>{{r3CondX}}</td> 
-            <td>{{r3CondY}}</td>
-            <td>{{!r3CondX}}</td>
-            <td>{{!r3CondY}}</td>
-            <td>{{r3CondX && r3CondY}}</td>
-            <td>{{r3CondX || r3CondY}}</td>
-        </tr>
-        <tr scope="row">
-            <td>{{r4CondX}}</td> 
-            <td>{{r4CondY}}</td>
-            <td>{{!r4CondX}}</td>
-            <td>{{!r4CondY}}</td>
-            <td>{{r4CondX && r4CondY}}</td>
-            <td>{{r4CondX || r4CondY}}</td>
-        </tr>
-    </tbody>
-</table>
+<form>
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Tournament Name</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name">
+    </div>
+    <!-- <div class="form-group">
+      <label for="exampleFormControlSelect1">Tournament Size</label>
+      <select class="form-control" id="exampleFormControlSelect1">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+    </div> -->
+    <!-- <div class="form-group">
+      <label for="exampleFormControlSelect2">Example multiple select</label>
+      <select multiple class="form-control" id="exampleFormControlSelect2">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+    </div> -->
+    <div class="form-group">
+        <label for="exampleFormControlTextarea1">Participants / Teams</label>
+        <li>One entry per line</li>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+</form>
+<button (click)="navigateTo('courses')" class="nav-button" type="button" mat-raised-button color='warn'>
+    Submit
+</button>
