--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 5fr 2fr;
     height: 100%;
-    background-color: #552483;
+    background-color: #9838f1;
 }
 
 .main-outlet {
