--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <app-main-header></app-main-header>
         <app-main-content></app-main-content>
         <router-outlet class="main-outlet"></router-outlet>
-        <app-main-footer></app-main-footer>
+        <!-- <app-main-footer></app-main-footer> -->
     </div>
 </body>
 
