--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,138 +1,121 @@
+<h1>
+  <!-- call name entered thru previous page -->
+</h1>
 <main id="tournament">
+    <ul class="round round-1" >
+    <!-- <tr *ngFor="let team of teamArray; let i = index"> -->
+    <!-- loop for how many teams -->
+    <li class="spacer">&nbsp;</li>
 
-    <ul class="round round-1">
-      <tr *ngFor="let list of teamArray" >
-        <li class="spacer">&nbsp;</li>
-  
-  
-  
-        <li class="game game-top winner"></li>
-        <p id="welcome"></p>
-        <input type="text" [(ngModel)]="list.Team1">
-        <button (click)="navigateTo('courses')" class="nav-button" type="button" mat-raised-button color='warn'>
-          Submit
-      </button>
-        <li class="game game-spacer">&nbsp;</li>
-        <li class="game game-bottom" ></li>  
-        <li class="spacer">&nbsp;</li>
-  
-  
-        <li class="spacer">&nbsp;</li>
-      </tr>
-      <button (click)="addTeam()">add</button>
-      <button (click)="removeTeam()">remove</button>
-  
-    </ul>
-    <ul class="round round-2">
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-  
-      <input>
-      <li class="game game-top winner"></li>
-  
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-spacer">&nbsp;</li>
-  
-      <input>
-      <li class="game game-bottom "></li>
-  
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-  
-      <input>
-      <li class="game game-bottom "></li>
-  
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-spacer">&nbsp;</li>
-  
-      <input>
-      <li class="game game-bottom "></li>
-  
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-    </ul>
-    <ul class="round round-3">
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-      <input>
-      <li class="game game-bottom "></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-spacer">&nbsp;</li>
-      <input>
-      <li class="game game-bottom "></li>
-  
-      <li class="spacer">&nbsp;</li>
-  
-  
-      <li class="spacer">&nbsp;</li>
-    </ul>
-    <ul class="round round-4">
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-      <input>
-      <li class="game game-bottom "></li>
-      <li class="spacer">&nbsp;</li>
-      <li class="spacer">&nbsp;</li>
-  
-  
-  
-      <li class="spacer">&nbsp;</li>
-  
-  
-  
-    </ul>
-  
-  
-  </main>
+    <li class="game game-top winner">TEAM1<span>
+      <div class="btn-group-vertical btn-group-sm" >
+        <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        <button type="button" class="btn btn-secondary">Edit</button></div>
+      </span></li>
+      
+    <li class="game game-spacer">&nbsp;</li>
+    
+    <li class="game game-bottom ">TEAM2<span><button type="button" class="btn btn-secondary" (click)="winner()">Advance</button><button type="button" class="btn btn-secondary">Middle</button></span></li>
 
+    <li class="spacer">&nbsp;</li>
 
+    <li class="game game-top winner">TEAM3<span>84</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM4<span>72</span></li>
 
-<!-- <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th scope="col">ID</th>
-                <th scope="col">First Name</th>
-                <th scope="col">Last Name</th>
-                <th scope="col">Courses</th>
-                <th>
-                    <div class="btn-group pull-right">
-                <button type="button" mat-raised-button color="accent" (click)="saveStudent()"><mat-icon>save</mat-icon></button>
-                <button type="button" mat-raised-button color="warn" [disabled]="disableAddButton" (click)="addStudent()"><mat-icon>create</mat-icon></button>
-</div>
-</th>
-</tr>
-</thead>
-<tbody>
-    <tr *ngFor="let student of studentArray; let i = index">
-        <th *ngIf="!student.editMode" scope="row">{{ student.id }}</th>
-        <td *ngIf="!student.editMode">{{ student.firstName }}</td>
-        <td *ngIf="!student.editMode">{{ student.lastName }}</td>
-        <td *ngIf="!student.editMode">{{ student.course }}</td>
+    <li class="spacer">&nbsp;</li>
 
-        <th *ngIf="student.editMode" scope="row">
-            <input [(ngModel)]="student.id" type="text" class="form-control" placeholder="ID">
-        </th>
-        <td *ngIf="student.editMode">
-            <input [(ngModel)]="student.firstName" type="text" class="form-control" placeholder="First Name">
-        </td>
-        <td *ngIf="student.editMode">
-            <input [(ngModel)]="student.lastName" type="text" class="form-control" placeholder="Last Name">
-        </td>
-        <td *ngIf="student.editMode">
-            <input [(ngModel)]="student.course" type="text" class="form-control" placeholder="Course">
-        </td>
+    <li class="game game-top ">TEAM5<span>55</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">TEAM6<span>68</span></li>
 
-        <td>
-            <button type="button" class="pull-right" mat-raised-button color="primary" (click)="removeStudent (i)">
-                    <mat-icon>delete_sweep</mat-icon>
-            </button>
-        </td>
-    </tr>
+    <li class="spacer">&nbsp;</li>
 
-</tbody>
-</table> -->
+    <li class="game game-top winner">TEAM7<span>64</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM8<span>44</span></li>
+
+    <li class="spacer">&nbsp;</li>
+<!-- 
+    <li class="game game-top winner">TEAM1 <span>54</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM1<span>52</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1<span>65</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM1<span>54</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1<span>67</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM1<span>63</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1<span>73</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM1<span>61</span></li>
+
+    <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <ul class="round round-2">
+    <!-- loop for winning teams-->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Lousville <span>82</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Colo St <span>56</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Oregon <span>74</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Saint Louis <span>57</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <!-- <li class="game game-top ">Memphis <span>48</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Mich St <span>70</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">Creighton <span>50</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Duke <span>66</span></li>
+
+    <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <ul class="round round-3">
+    <!-- loop calling winning teams-->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Lousville <span>77</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Oregon <span>69</span></li>
+
+    <li class="spacer">&nbsp;</li>
+<!-- 
+    <li class="game game-top ">Mich St <span>61</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">Duke <span>71</span></li>
+
+    <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <!-- <ul class="round round-4">
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">Lousville <span>85</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">Duke <span>63</span></li>
+
+    <li class="spacer">&nbsp;</li>
+  </ul> -->
+  <ul class="round round-5">
+    <!-- call winning team-->
+    <li class="game game-top winner">Lousville <span>85</span></li>
+  </ul>
+</main>
