--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,182 @@
 <form>
-    <div class="form-group">
-        <label for="exampleFormControlInput1">Tournament Name</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name">
-    </div>
-    <!-- <div class="form-group">
-      <label for="exampleFormControlSelect1">Tournament Size</label>
-      <select class="form-control" id="exampleFormControlSelect1">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    </div> -->
-    <!-- <div class="form-group">
-      <label for="exampleFormControlSelect2">Example multiple select</label>
-      <select multiple class="form-control" id="exampleFormControlSelect2">
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-      </select>
-    </div> -->
-    <div class="form-group">
-        <label for="exampleFormControlTextarea1">Participants / Teams</label>
-        <li>One entry per line</li>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
+  <div>
+    <label for="exampleFormControlInput1">Tournament Name</label>
+    <input type="text" class="form-control" name="tourneyName" [(ngModel)]="tourneyName" placeholder="Name">
+  </div>
+  <div class="form-group">
+    <br>
+    <label for="exampleFormControlTextarea1">Participants / Teams</label>
+    <li>Limit 8 participants/teams</li>
+    <li>One entry per line.</li>
+    <textarea ngModel (ngModelChange)="teamNames($event)" name="teamName" class="form-control"
+      id="exampleFormControlTextarea1" rows="3" placeholder="Participant Names / Team Names"></textarea>
+  </div>
 </form>
-<button (click)="navigateTo('courses')" class="nav-button" type="button" mat-raised-button color='warn'>
-    Submit
+<div class="form-group form-check">
+  <input type="checkbox" class="form-check-input" id="randomCheck">
+  <label class="form-check-label" for="randomCheck">Randomize</label>
+</div>
+<!-- ?? SUBMIT navigateTo('courses'); ??-->
+<!-- DISABLE SUBMIT after click until EDIT or CLEAR is clicked -->
+<button (click)="tourney()" class="btn btn-success" type="button" mat-raised-button>
+  Submit
 </button>
+<button (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
+  Edit
+</button>
+<button (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
+  Clear
+</button>
+
+<h1>
+  <br>
+  <!-- call name entered thru previous page -->
+  {{tourneyTitle}}
+
+</h1>
+<main id="tournament">
+  <ul class="round round-1">
+    <!-- <tr *ngFor="let team of teamArray; let i = index"> -->
+    <!-- loop for how many teams -->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+
+    <li class="game game-spacer">&nbsp;</li>
+
+    <li class="game game-bottom ">TEAM2<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM3<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM4<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top ">TEAM5<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom winner">TEAM6<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM7<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM8<span>
+        <div class="btn-group-sm">
+          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+        </div>
+      </span></li>
+
+    <li class="spacer">&nbsp;</li>
+    <!-- 
+      <li class="game game-top winner">TEAM1 <span>54</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>52</span></li>
+  
+      <li class="spacer">&nbsp;</li>
+  
+      <li class="game game-top winner">TEAM1<span>65</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>54</span></li>
+  
+      <li class="spacer">&nbsp;</li>
+  
+      <li class="game game-top winner">TEAM1<span>67</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>63</span></li>
+  
+      <li class="spacer">&nbsp;</li>
+  
+      <li class="game game-top winner">TEAM1<span>73</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">TEAM1<span>61</span></li>
+  
+      <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <ul class="round round-2">
+    <!-- loop for winning teams-->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1 <span>82</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM3 <span>56</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM6 <span>74</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM7 <span>57</span></li>
+
+    <li class="spacer">&nbsp;</li>
+
+    <!-- <li class="game game-top ">Memphis <span>48</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Mich St <span>70</span></li>
+  
+      <li class="spacer">&nbsp;</li>
+  
+      <li class="game game-top ">Creighton <span>50</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Duke <span>66</span></li>
+  
+      <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <ul class="round round-3">
+    <!-- loop calling winning teams-->
+    <li class="spacer">&nbsp;</li>
+
+    <li class="game game-top winner">TEAM1 <span>77</span></li>
+    <li class="game game-spacer">&nbsp;</li>
+    <li class="game game-bottom ">TEAM6 <span>69</span></li>
+
+    <li class="spacer">&nbsp;</li>
+    <!-- 
+      <li class="game game-top ">Mich St <span>61</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom winner">Duke <span>71</span></li>
+  
+      <li class="spacer">&nbsp;</li> -->
+  </ul>
+  <!-- <ul class="round round-4">
+      <li class="spacer">&nbsp;</li>
+  
+      <li class="game game-top winner">Lousville <span>85</span></li>
+      <li class="game game-spacer">&nbsp;</li>
+      <li class="game game-bottom ">Duke <span>63</span></li>
+  
+      <li class="spacer">&nbsp;</li>
+    </ul> -->
+  <ul class="round round-5">
+    <!-- call winning team-->
+    <li class="game game-top winner">Lousville <span>85</span></li>
+  </ul>
+</main>
