added disable buttons & left off on clear text in clearAll()

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <form>
   <div>
     <label for="exampleFormControlInput1">Tournament Name</label>
-    <input type="text" class="form-control" name="tourneyName" [(ngModel)]="tourneyName" placeholder="Name">
+    <input type="text" class="form-control" name="tourneyName" [(ngModel)]="tourneyName" placeholder="Name" [disabled]="textDisabled" [value]="inText">
   </div>
   <div class="form-group">
     <br>
@@ -9,7 +9,7 @@
     <li>Limit 8 participants/teams</li>
     <li>One entry per line.</li>
     <textarea ngModel (ngModelChange)="teamNames($event)" name="teamName" class="form-control"
-      id="exampleFormControlTextarea1" rows="3" placeholder="Participant Names / Team Names"></textarea>
+      id="exampleFormControlTextarea1" rows="3" placeholder="Participant Names / Team Names" [disabled]="textDisabled" [value]="inText"></textarea>
   </div>
 </form>
 <div class="form-group form-check">
@@ -18,7 +18,7 @@
 </div>
 <!-- ?? SUBMIT navigateTo('courses'); ??-->
 <!-- DISABLE SUBMIT after click until EDIT or CLEAR is clicked -->
-<button (click)="tourney()" class="btn btn-success" type="button" mat-raised-button>
+<button [disabled]="disableSubmitButton" (click)="tourney()" class="btn btn-success" type="button" mat-raised-button>
   Submit
 </button>
 <button (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
