--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,13 @@
 <html>
 
 <head>
-    <title>Lab Assignment 2</title>
+    <title>Project</title>
 
 </head>
 
 <body>
     <div class="main-container">
+        <app-toast></app-toast>
         <app-main-header></app-main-header>
         <app-main-content></app-main-content>
         <router-outlet class="main-outlet"></router-outlet>
