--- a/src/app/main-content/main-content.component.css
+++ b/src/app/main-content/main-content.component.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 5fr 1fr;
     height: 100%;
-    background-color: #9838f1;
+    background-color: #cccccc;
 }
 
 .main-outlet {
