--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,21 +12,23 @@
     placeholder="Participant Names / Team Names" [disabled]="textDisabled" [(ngModel)]="newTeam"></textarea>
 </div>
 
-<div class="form-group form-check">
+<!-- <div class="form-group form-check">
   <input type="checkbox" class="form-check-input" id="randomCheck">
-  <label class="form-check-label" for="randomCheck">Randomize</label>
-  <button (click)=random()>random</button>
-</div>
+  <label class="form-check-label" for="randomCheck" >Randomize</label>
+ 
+</div> -->
 <!-- ?? SUBMIT navigateTo('courses'); ??-->
 <!-- DISABLE SUBMIT after click until EDIT or CLEAR is clicked -->
-<button [disabled]="disableSubmitButton" (click)="tourney(); addTeams(newTeam)" class="btn btn-success" type="button"
-  mat-raised-button>
+<button style="margin-right: 10px" [disabled]="disableSubmitButton" (click)="tourney(); addTeams(newTeam)"
+  class="btn btn-success" type="button" mat-raised-button>
   Submit
 </button>
-<button (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
+<button style="margin-right: 10px" class="pull-right" (click)="editSeeds()" class="btn btn-warning" type="button"
+  mat-raised-button>
   Edit
 </button>
-<button (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
+<button style="margin-right: 10px" class="btn btn-info" (click)=random() mat-raised-button>random</button>
+<button style="margin-right: 10px" (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
   Clear
 </button>
 
@@ -36,177 +38,80 @@
   {{tourneyTitle}}
 </h1>
 <main id="tournament">
-  <ul class="round round-1">
 
+
+
+  <ul class="round round-1">
     <tr *ngFor="let Team of teams; let i = index">
       <!-- loop for how many teams -->
       <li class="spacer">&nbsp;</li>
       <li class="game game-top winner">Team {{1+i}} {{Team}}<span>
-          <div class="btn-group-sm">
-            <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-          </div>
         </span></li>
+      <div class="btn-group-sm">
+        <button type="button" class="btn btn-secondary" (click)="winner(1, i, getTeamName(i))">Advance</button>
+        <button class="btn btn-danger pull-right" (click)="removeTeams(i)">X</button>
+      </div>
       <li class="game game-spacer">&nbsp;</li>
-      <button class="btn btn-danger pull-right" (click)="removeTeams(i)">X</button>
-      <!-- <li class="game game-bottom ">TEAM2<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      
-      </span></li>
-
-    <li class="spacer">&nbsp;</li>
-
-    <li class="game game-top winner">TEAM3<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-    <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-bottom ">TEAM4<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-
-    <li class="spacer">&nbsp;</li>
-
-    <li class="game game-top ">TEAM5<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-    <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-bottom winner">TEAM6<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-
-    <li class="spacer">&nbsp;</li>
-
-    <li class="game game-top winner">TEAM7<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-    <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-bottom ">TEAM8<span>
-        <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-        </div>
-      </span></li>
-
-    <li class="spacer">&nbsp;</li> -->
-      <!-- 
-      <li class="game game-top winner">TEAM1 <span>54</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom ">TEAM1<span>52</span></li>
-  
-      <li class="spacer">&nbsp;</li>
-  
-      <li class="game game-top winner">TEAM1<span>65</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom ">TEAM1<span>54</span></li>
-  
-      <li class="spacer">&nbsp;</li>
-  
-      <li class="game game-top winner">TEAM1<span>67</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom ">TEAM1<span>63</span></li>
-  
-      <li class="spacer">&nbsp;</li>
-  
-      <li class="game game-top winner">TEAM1<span>73</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom ">TEAM1<span>61</span></li>
-  
-      <li class="spacer">&nbsp;</li> -->
     </tr>
-
   </ul>
+
+
+
   <ul class="round round-2">
     <!-- loop for winning teams-->
     <li class="spacer">&nbsp;</li>
-    <li class="game game-top winner">TEAM<span>
+    <li class="game game-top winner">{{getWinnerName(1, 0)}}{{getWinnerName(1, 1)}}<span>
         <div class="btn-group-sm">
-
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
-
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(2, 1, getWinnerName(1, 0)); winner(2, 0, getWinnerName(1, 1))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">TEAM<span>
+    <li class="game game-top winner">{{getWinnerName(1, 2)}}{{getWinnerName(1, 3)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(2, 1, getWinnerName(1, 2));  winner(2, 0, getWinnerName(1, 3))">Advance</button>
         </div>
       </span></li>
-
     <li class="spacer">&nbsp;</li>
-
-    <li class="game game-top winner">TEAM<span>
+    <li class="game game-top winner">{{getWinnerName(1, 4)}}{{getWinnerName(1, 5)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(2, 2, getWinnerName(1, 4));  winner(2, 3, getWinnerName(1, 5))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">TEAM<span>
+    <li class="game game-top winner">{{getWinnerName(1, 6)}}{{getWinnerName(1, 7)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(2, 2, getWinnerName(1, 6));  winner(2, 3, getWinnerName(1, 7))">Advance</button>
         </div>
       </span></li>
-
     <li class="spacer">&nbsp;</li>
-
-    <!-- <li class="game game-top ">Memphis <span>48</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom winner">Mich St <span>70</span></li>
-  
-      <li class="spacer">&nbsp;</li>
-  
-      <li class="game game-top ">Creighton <span>50</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom winner">Duke <span>66</span></li>
-  
-      <li class="spacer">&nbsp;</li> -->
   </ul>
+
+
+
   <ul class="round round-3">
     <!-- loop calling winning teams-->
     <li class="spacer">&nbsp;</li>
-
-
-    <li class="game game-top winner">TEAM<span>
-
+    <li class="game game-top winner">{{getWinnerName(2, 1)}}{{getWinnerName(2, 0)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(3, 1, getWinnerName(2, 1)); winner(3, 2, getWinnerName(2, 0))">Advance</button>
         </div>
       </span></li>
     <li class="game game-spacer">&nbsp;</li>
-    <li class="game game-top winner">TEAM<span>
+    <li class="game game-top winner">{{getWinnerName(2, 2)}}{{getWinnerName(2, 3)}}<span>
         <div class="btn-group-sm">
-          <button type="button" class="btn btn-secondary" (click)="winner()">Advance</button>
+          <button type="button" class="btn btn-secondary"
+            (click)="winner(3, 1, getWinnerName(2, 2)); winner(3, 2, getWinnerName(2, 3))">Advance</button>
         </div>
       </span></li>
-
     <li class="spacer">&nbsp;</li>
-    <!-- 
-      <li class="game game-top ">Mich St <span>61</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom winner">Duke <span>71</span></li>
-  
-      <li class="spacer">&nbsp;</li> -->
   </ul>
-  <!-- <ul class="round round-4">
-      <li class="spacer">&nbsp;</li>
-  
-      <li class="game game-top winner">Lousville <span>85</span></li>
-      <li class="game game-spacer">&nbsp;</li>
-      <li class="game game-bottom ">Duke <span>63</span></li>
-  
-      <li class="spacer">&nbsp;</li>
-    </ul> -->
   <ul class="round round-5">
     <!-- call winning team-->
-    <li class="game game-top winner">TEAM1 <span>WINNER</span></li>
+    <li class="game game-top winner">{{getWinnerName(3, 1)}}{{getWinnerName(3, 2)}}<span>WINNER</span></li>
   </ul>
 </main>
