edit html & css

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -71,13 +71,13 @@ main{
       margin-right:5px;
     }
   
-    li.game-top{ border-bottom:1px solid #aaa; }
+    li.game-top{ border-bottom:1px solid rgb(0, 0, 0); }
   
     li.game-spacer{ 
-      border-right:1px solid #aaa;
+      border-right:1px solid rgb(0, 0, 0);
       min-height:40px;
     }
   
     li.game-bottom{ 
-      border-top:1px solid #aaa;
+      border-top:1px solid rgb(0, 0, 0);
     }
