--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,16 +1,11 @@
 <div class="row-one">
     <div class="container-padding">
-        r1c1
+        
     </div>
     <div id="r1c2" class="container-padding">
-        <button (click)="navigateTo('')" class="nav-buttons" type="button" mat-raised-button color="primary">
-            Home
-        </button>
-        <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="primary">
-            Courses
-        </button>
+        <font size="+6"><b>Bracket Generator</b></font>
     </div>
     <div class="container-padding">
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+        
     </div>
 </div>
