--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ html,
 body {
     width: 100vw;
     height: 100vh;
-    background-color: #4048b8;
+    background-color: #3e4264;
 }
 
 .container-padding {
