--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
   <label class="form-check-label" for="randomCheck">Randomize</label>
 </div>
 
-<button [disabled]="disableSubmitButton" (click)="tourney()" class="btn btn-success" type="button"
+<button [disabled]="disableSubmitButton" (click)="tourney(newTeam)" class="btn btn-success" type="button"
   mat-raised-button>
   Submit
 </button>
