--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,20 +20,21 @@
     placeholder="Participant Names / Team Names" [disabled]="textDisabled" [(ngModel)]="newTeam"></textarea>
 </div>
 
-<button [disabled]="disableSubmitButton" (click)="tourney(newTeam)" class="btn btn-success" type="button"
+<button style="margin-right: 10px" [disabled]="disableSubmitButton" (click)="tourney(newTeam)" class="btn btn-success" type="button"
   mat-raised-button>
   Submit
 </button>
-<button (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
+<button style="margin-right: 10px" (click)="editSeeds()" class="btn btn-warning" type="button" mat-raised-button>
   Edit
 </button>
-<button (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
+<button style="margin-right: 10px" class="btn btn-info" (click)=random() mat-raised-button>random</button>
+<button style="margin-right: 10px" (click)="clearAll()" class="btn btn-danger" type="button" mat-raised-button>
   Clear
 </button>
 
 <h1>
   <br>
-  {{tourneyTitle}}
+  <font color="white">{{tourneyTitle}}</font>
 </h1>
 <main id="tournament">
   <ul class="round round-1">
